--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MadFinalProject">
         <activity
+            android:name=".AddHotel"
+            android:exported="true" />
+        <activity
             android:name=".TravelerMainView"
             android:exported="true" />
         <activity
