adding fully completed hotel owner all and main views + style enhancements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,15 @@
     <application
         android:name=".NotificationHelper"
         android:allowBackup="true"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MadFinalProject"
-        android:fullBackupContent="false">
+        android:theme="@style/Theme.MadFinalProject">
+        <activity
+            android:name=".HotelHotelOwnerMainView"
+            android:exported="true" />
         <activity
             android:name=".BookHotel"
             android:exported="true" />
