completed tourguide all functions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MadFinalProject">
-
+        <activity
+            android:name=".editTouristAttraction"
+            android:exported="true" />
+        <activity
+            android:name=".tourguideSingleView"
+            android:exported="true" />
         <activity
             android:name=".EditReview"
             android:exported="true" />
@@ -71,7 +76,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
