--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MadFinalProject">
-
+        <activity
+            android:name=".TravellerFavouriteHotels"
+            android:exported="true" />
         <activity
             android:name=".EditReview"
             android:exported="true" />
@@ -87,8 +89,6 @@
         <activity
             android:name=".SignIn"
             android:exported="true" />
-
-
     </application>
 
 </manifest>
