--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'joda-time:joda-time:2.9.1'
 }
